--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
 
+        //compile 'com.android.support:appcompat-v7:23.4.0'
+        //compile 'com.parse.bolts:bolts-tasks:1.3.0'
+        //compile 'com.parse:parse-android:1.13.0'
+        //compile 'com.google.android.gms:play-services:9.2.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
