--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
 
     //Fresco
-    compile 'com.facebook.fresco:fresco:0.6.1'
+    
 
-}
+    compile 'com.android.support:appcompat-v7:27.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.facebook.fresco:fresco:0.6.1'
+    testCompile 'junit:junit:4.12'}
+
 
 
 
